cabal-version:      2.4
name:               pong-haskell
version:            0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:            LICENSE
author:             i3elj
maintainer:         guisande.bernardo@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable pong-haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0, gloss
    other-modules:    Types, Config, Ball, Player, Wall, Inputs, Particles, Game
    hs-source-dirs:   app
    default-language: Haskell2010
